[gd_scene load_steps=2 format=2]

[ext_resource path="res://Network.gd" type="Script" id=1]

[node name="Network" type="Node"]
script = ExtResource( 1 )

[node name="InputLayer" type="Node" parent="."]

[node name="HiddenLayer" type="Node" parent="."]

[node name="OutputLayer" type="Node" parent="."]
